# eraserbenchmark

./: .gitignore  README.md  requirements.txt  setup.cfg
src/eraserbenchmark/: __init__.py  metrics.py
src/eraserbenchmark/models/: encode_attend.py  mlp.py  sequence_taggers.py
src/eraserbenchmark/models/pipeline/: bert_pipeline.py  evidence_classifier.py  evidence_identifier.py  evidence_token_identifier.py  pipeline_train.py  pipeline_utils.py
