[metadata]
name = eraserbenchmark
version = 0.0.1
author = Jay DeYoung, Sarthak Jain, Nazneen Fatema Rajani, Eric Lehman, Caiming Xiong, Richard Socher, Byron C. Wallace, Zijian Zhang
home_page = https://https://github.com/JoshuaGhost/eraserbenchmark
license = GPLv3
long_description = file: README.md


[options]
python_requires = >= 3.6
install_requires =
packages = find:
package_dir =
           =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    ftfy==5.5.1
    gensim==3.7.1
    numpy==1.16.2
    scipy==1.8.0
    scispacy==0.2.3
    scikit-learn==1.0.2
    spacy==2.1.8
    torch==1.11.0
    tqdm==4.64.0
    transformers==4.18.0

[options.entry_points]
console_scripts =
    eraserbenchmark = eraserbenchmark.metrics:main
